--- a/Technical-Assistant/pom.xml
+++ b/Technical-Assistant/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ru.great-larder</groupId>
     <artifactId>Technical-Assistant</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.6</version>
     <name>Technical Assistant</name>
     <url>https://www.great-larder.ru</url>
     <developers>
@@ -22,7 +22,7 @@
         <!-- ********** plugin ********** -->
         <maven.compiler.plugin>3.10.1</maven.compiler.plugin>
         <javafx.maven.plugin>0.0.8</javafx.maven.plugin>
-
+        <!-- ********** default ********** -->
         <junit.version>5.9.2</junit.version>
         <javafx.controls>21-ea+5</javafx.controls>
         <javafx.fxml>21-ea+5</javafx.fxml>
@@ -34,12 +34,12 @@
         <jfxtras-controls>17-r1</jfxtras-controls>
         <sqlite-jdbc>3.40.1.0</sqlite-jdbc>
         <mysql-connector-j>8.0.32</mysql-connector-j>
-        <jakarta.mail>1.6.5</jakarta.mail>
-        <commons-io>2.8.0</commons-io>
+        <jakarta.mail>2.0.1</jakarta.mail>
+        <commons-io>2.11.0</commons-io>
         <jsoup>1.15.4</jsoup>
         <javafx-web>21-ea+5</javafx-web>
         <commons-net>3.9.0</commons-net>
-        <poi>4.1.2</poi>
+        <org.apache.poi>5.2.2</org.apache.poi>
     </properties>
 
     <dependencies>
@@ -122,7 +122,7 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>${poi}</version>
+            <version>${org.apache.poi}</version>
         </dependency>
         <dependency>
             <groupId>org.xerial</groupId>
@@ -170,6 +170,8 @@
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+                            <bundleJre>true</bundleJre>
+                            <iconFile>ru/greatlarder/technicalassistant/images/icon/logo.ico</iconFile>
                         </configuration>
                     </execution>
                 </executions>
